updated comments for patch sensor
